refactors form templates, extends with custom data

--- a/config/index.html
+++ b/config/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="container">
             {% include "./templates/pageheader.html" %}
-            {% include "./templates/form.html" %}
+            {% include "./templates/customForm.html" %}
         </div>
     </body>
 </html>
