--- a/config/index.html
+++ b/config/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="container">
-            {% include "./templates/pageheader.html" %}
+            {% include "./templates/base/header.html" %}
             {% include "./templates/customForm.html" %}
         </div>
     </body>
