--- a/config/index.html
+++ b/config/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF8">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-        <link rel="stylesheet" href="bootstrap.min.css">
-        <link rel="stylesheet" href="styles.css">
-        <script type="text/javascript" href="submit.js"></script>
+        <link rel="stylesheet" href="./stylesheets/bootstrap.min.css">
+        <link rel="stylesheet" href="./stylesheets/styles.css">
+        <script type="text/javascript" href="./scripts/submit.js"></script>
     </head>
     <body>
         <div class="container">
