--- a/config/confirmation.html
+++ b/config/confirmation.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF8">
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <h1>Thank you!</h1>
-    </body>
-</html>
+{% extends "./templates/base/page.html" %}
+
+{% block bodycontent %}
+    <h3>Settings saved</h3>
+{% endblock %}
