--- a/config/index.html
+++ b/config/index.html
@@ -1,17 +1,5 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF8">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-        <link rel="stylesheet" href="./stylesheets/bootstrap.min.css">
-        <link rel="stylesheet" href="./stylesheets/styles.css">
-        <script type="text/javascript" href="./scripts/submit.js"></script>
-    </head>
-    <body>
-        <div class="container">
-            {% include "./templates/base/header.html" %}
-            {% include "./templates/customForm.html" %}
-        </div>
-    </body>
-</html>
-    
+{% extends "./templates/base/page.html" %}
+
+{% block bodycontent %}
+    {% include "./templates/customForm.html" %}
+{% endblock %}
